--- a/tex/mcqmc-2008/sfmt-kanren.bib
+++ b/tex/mcqmc-2008/sfmt-kanren.bib
@@ -65,7 +65,7 @@ pages = "1-16",
 number = "1",
 }
 
-@article {XORSHIFT,
+@article {XORSHIFT-LEcuyer,
 author = "F. Panneton and P. L'Ecuyer",
 title = "On the {Xorshift} Random Number Generators",
 journal = "ACM Transactions on Modeling and Computer Simulation",
@@ -475,7 +475,8 @@ volume =  "17",
 number = "1",
 month = Jan,
 year = 2007,
-note ="doi:10.1145/1189756.1189759"}
+note ="\url{doi:10.1145/1189756.1189759}"
+}
 
 @inproceedings{reid:scribe,
 author = "Brian K. Reid",
@@ -499,4 +500,17 @@ title = "An Application of Finite Field:Design and Implementation of 128-bit Ins
 school = "Hiroshima University",
 year = "2007",
 note = "\url{http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/SFMT/M062821.pdf}"
+}
+
+@misc{stosic-2006,
+  author = {Borko D. Stosic},
+  title = {Fast random number generation using 128 bit multimedia extension   registers on Pentium class machines},
+  url = {http://www.citebase.org/abstract?id=oai:arXiv.org:physics/0609211},
+  year = {2006}
+}
+@misc{diehard,
+author = "G. Marsaglia",
+title = "{The Marsaglia Random Number CDROM, with the DIEHARD Battery of Tests of Randomness.}",
+note = "Department of Statistics, Florida State University, (1996) \url{http://www.stat.fsu.edu/pub/diehard/}",
+url = "http://www.stat.fsu.edu/pub/diehard/"
 }
