--- a/tex/mcqmc-2008/mcqmc2008.tex
+++ b/tex/mcqmc-2008/mcqmc2008.tex
@@ -1427,4 +1427,4 @@ No.18005.
 % LocalWords:  ffdffeffefbfc ffffffdf dfffffff bfff ffafffffffb ffdfffc rr xcfb
 % LocalWords:  xccaa xc ae adb xb da aeb xde xf ef fd cb ba xd caae uint IEC le
 % LocalWords:  icl dSFMTv const blk Ghz mexp rrrrrr sfmt kanren equi LSB intel
-% LocalWords:  crrrrrr ap ar xorshift Im dSFMT's
+% LocalWords:  crrrrrr ap ar xorshift Im dSFMT's DIEHARD
