--- a/tex/mcqmc-2008/sfmt-kanren.bib
+++ b/tex/mcqmc-2008/sfmt-kanren.bib
@@ -86,6 +86,26 @@ number = "4",
 volume = "15"
 }
 
+@article{LEcuyer-combdif,
+author = "P. L'Ecuyer and J. Granger-Pich\'{e}",
+title = "Combined Generators with Components from Different Families",
+journal = "Mathematics and Computers in Simulation",
+volume = "62",
+year = "2003",
+pages = "395-404"
+}
+
+
+@inproceedings{F2RNG-LEcuyer,
+author = "P. L'Ecuyer and F. Panneton",
+title = "$\mathbb{F}_2$-Linear Random Number Generators",
+booktitle = "Advancing the Frontiers of Simulation: 
+ A Festschrift in Honor of George Samuel Fishman",
+note="C. Alexopoulos, D. Goldsman, and J. R. Wilson Eds.",
+year = "2009",
+pages = "175-200"
+}
+
 @article {XORSHIFT-MAR,
 author = "G. Marsaglia",
 title = "Xorshift {RNGs}",
@@ -145,7 +165,7 @@ number = "5",
 
 @inproceedings {SFMT,
 author = "M. Saito and M. Matsumoto",
-title = "{SIMD}-oriented Fast Mersenne Twister:a 128-bit Pseudorandom Number Generator",
+title = "{SIMD}-oriented Fast {Mersenne} Twister : a 128-bit Pseudorandom Number Generator",
 booktitle = "Monte Carlo and Quasi-Monte Carlo Methods 2006",
 year = "2008",
 pages = "607-622",
@@ -322,6 +342,17 @@ volume = "62",
 year = "2003",
 pages = "431-442",
 number = "3-6"
+}
+
+@article{MT64,
+author = "T. Nishimura",
+title = "Tables of 64-bit Mersenne Twisters",
+journal = "ACM Trans. on Modeling and Computer Simulation",
+volume = "10",
+year = "2000",
+pages = "348-357",
+number = "4",
+month = oct
 }
 
 @comment{PMT,
